--- a/.gitignore
+++ b/.gitignore
@@ -11,11 +11,13 @@ firebase-debug.*.log*
 .firebase/
 
 # Firebase config
+config/
+/credentials/
 
 # Uncomment this if you'd like others to create their own Firebase project.
 # For a team working on the same Firebase project(s), it is recommended to leave
 # it commented so all members can deploy to the same project(s) in .firebaserc.
-# .firebaserc
+#.firebaserc
 
 # Runtime data
 pids
@@ -64,4 +66,5 @@ node_modules/
 
 # dotenv environment variables file
 .env
-
+.idea/
+env
