--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "vfecommerseapp",
+  "name": "vfecommerse",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
@@ -12,8 +13,8 @@
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "express.js": "^1.0.0",
+    "firebase": "^10.4.0",
     "firebase-admin": "^11.10.1",
     "nodemon": "^3.0.1"
-  },
-  "description": ""
+  }
 }
