--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ firebase-debug.*.log*
 # Firebase config
 config/
 /credentials/
+Public/credentials/
 
 # Uncomment this if you'd like others to create their own Firebase project.
 # For a team working on the same Firebase project(s), it is recommended to leave
@@ -67,4 +68,4 @@ node_modules/
 # dotenv environment variables file
 .env
 .idea/
-env
+.env
