--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vfecommerse",
+  "name": "vfecommerce",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,10 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express.js": "^1.0.0",
     "firebase": "^10.4.0",
     "firebase-admin": "^11.10.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "uuid": "^9.0.1",
+    "uuid-v4": "^0.1.0"
   }
 }
