Update: signup, checkout, addProduct

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express.js": "^1.0.0",
     "firebase": "^10.4.0",
     "firebase-admin": "^11.10.1",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
     "uuid": "^9.0.1",
     "uuid-v4": "^0.1.0"
