--- a/.gitignore
+++ b/.gitignore
@@ -68,4 +68,8 @@ node_modules/
 # dotenv environment variables file
 .env
 .idea/
-.env
+.env/
+
+@other
+ Public/img/products/
+ Public/img/products
