--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "VF",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1486.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
